[package]
name = "lasagna-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.0"
actix-rt = "2.11.0"
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
data-encoding = "2.9.0"
ed25519-dalek = {version = "3.0.0-pre.1", features = ["serde", "rand_core"] }
ed25519_keygen = "0.1.0"
futures-lite = "2.6.1"
iroh = "0.93.2"
iroh-gossip = "0.93.1"
num-bigint = { version = "0.4.6", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
